@@ -22,7 +22,8 @@ At least, you had better search '[INCOMPATIBLE CHANGES]' for each version.
 
 Version 4.3 - ,**********, by Shigio Yamaguchi
 
-* DJGPP support added.
+* Support DJGPP.
+* Support nvi-1.81.5.
 * global,gtags: the -q option added.
 * htags: fill anchors into path name.
 * global.texi: chapter of less viewer and reference manuals added.
