@@ -24,6 +24,7 @@ ChangeLog about GNU GLOBAL
 	* DJGPP support code added.
 	  Jason Hood ported Global-4.0.1 into DJGPP environment.
 	  I have merged his code into this version.
+	* gtags.pl added.
 	* Convert.pl added. From now on, usage, help, man, info are
 	  generated automatically by this script from */manual.in files.
 	* gtags, global: make exit code rule:
